working ms up to data section

--- a/Manuscripts/NychkaStuff.tex
+++ b/Manuscripts/NychkaStuff.tex
@@ -88,6 +88,8 @@
 \newcommand{\bbmu}{\bld \mu}
 \newcommand{\bbeta}{\bld \beta}
 \newcommand{\bgamma}{\bld \gamma}
+\newcommand{\bxi}{\bld \xi}
+
 
 \newcommand{\beps}{\bld \epsilon}
 \newcommand{\balpha}{\bld \alpha}
